<resources>
    <string name="app_name_cn">王者娱乐城</string>
    <string name="app_name_en">wzylc</string>
    <string name="account_not_empty">账号不能为空</string>
    <string name="password_not_empty">密码不能为空</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_default">--</string>
    <string name="loading_eg">Loading</string>
    <string name="login_text_1">请输入账号</string>
    <string name="login_text_2">请输入密码</string>
    <string name="login_text_3">账号或者密码错误</string>
    <string name="login_text_4">忘记密码</string>
    <string name="login_text_5">注册账号</string>
    <string name="login_text_6">登录</string>
    <string name="login_text_7">微信登录</string>
    <string name="login_text_8">QQ登录\t</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="main_text_1">     充值 </string>
    <string name="main_text_2"> 提现 </string>
    <string name="main_text_3"> 规则 </string>
    <string name="main_text_4">个人中心</string>
    <string name="main_title">王者对决娱乐</string>
    <string name="fragment_main_text_1">昵称：</string>
    <string name="fragment_main_text_2">编号：</string>
    <string name="fragment_main_text_3">点数：</string>
    <string name="fragment_main_text_4">已关盘</string>
    <string name="fragment_main_text_5">已封盘</string>
    <string name="fragment_withdraw_text_1">ID：</string>
    <string name="fragment_withdraw_text_2">剩余点数：</string>
    <string name="fragment_withdraw_text_3">返水点数：</string>
    <string name="fragment_withdraw_text_4">佣金点数：</string>
    <string name="fragment_withdraw_text_5">兑换</string>
    <string name="fragment_withdraw_text_6">请输入提现金额</string>
    <string name="fragment_withdraw_text_7">大额请绑定银行卡</string>
    <string name="fragment_withdraw_text_8">绑定银行卡</string>
    <string name="fragment_withdraw_text_9">在线客服</string>
    <string name="fragment_withdraw_text_10">确定</string>
    <string name="fragment_withdraw_text_11">请选择提现方式</string>
    <string name="fragment_withdraw_text_12">绑定银行卡</string>
    <string name="fragment_withdraw_text_13">绑定支付宝</string>
    <string name="fragment_withdraw_text_14">绑定微信</string>
    <string name="fragment_withdraw_text_15">账户总览</string>
    <string name="sure">确定</string>
    <string name="fragment_rule_text_1">北京赛车</string>
    <string name="fragment_rule_text_2">香港赛马</string>
    <string name="fragment_rule_text_3">幸运飞艇</string>
    <string name="fragment_rule_text_4">重庆时时彩</string>
    <string name="fragment_rule_text_5">香港六合彩</string>
    <string name="fragment_rule_text_6">江苏快三</string>
    <string name="fragment_rule_text_7">PC蛋蛋</string>
    <string name="fragment_rule_text_8">加拿大28</string>
    <string name="fragment_rule_text_9">QQ两分彩</string>
    <string name="fragment_rule_text_10">玩法介绍：</string>
    <string name="fragment_rule_text_11">北京赛车玩法介绍：</string>
    <string name="fragment_rule_text_12">香港赛马玩法介绍：</string>
    <string name="fragment_rule_text_13">幸运飞艇玩法介绍：</string>
    <string name="fragment_rule_text_14">重庆时时彩玩法介绍：</string>
    <string name="fragment_rule_text_15">香港六合彩玩法介绍：</string>
    <string name="fragment_rule_text_16">江苏快三玩法介绍：</string>
    <string name="fragment_rule_text_17">PC蛋蛋玩法介绍：</string>
    <string name="fragment_rule_text_18">加拿大28玩法介绍：</string>
    <string name="fragment_rule_text_19">QQ两分彩玩法介绍：</string>
    <string name="fg_person_text_1">转账</string>
    <string name="fg_person_text_2">充值</string>
    <string name="fg_person_text_3">提现</string>
    <string name="fg_person_text_4">投注记录</string>
    <string name="fg_person_text_5">客服人员</string>
    <string name="fg_person_text_6">APP下载</string>
    <string name="fg_person_text_7">提现记录</string>
    <string name="fg_person_text_8">充值记录</string>
    <string name="fg_person_text_9">代理中心</string>
    <string name="fg_recharge_text_1">请输入转账昵称</string>
    <string name="fg_recharge_text_2">请输入充值金额</string>
    <string name="fg_recharge_text_3">充值范围为：</string>
    <string name="fg_recharge_text_4">微信扫描充值</string>
    <string name="fg_recharge_text_5">支付宝充值</string>
    <string name="fg_recharge_text_6">网银充值</string>
    <string name="fg_agent_text_1">代理中心</string>
    <string name="fg_agent_text_2">下级返水比例</string>
    <string name="fg_agent_text_3">下级玩家</string>
    <string name="fg_agent_text_4">查看流水</string>
    <string name="fg_agent_text_5">长按图片保存您的推广图片</string>
    <string name="fg_agent_text_6">ID：</string>
    <string name="title_activity_game_bjsc">GameBJSCActivity</string>
    <string name="game_text_1">返回大厅</string>
    <string name="game_text_2">充值</string>
    <string name="game_text_3">提现</string>
    <string name="game_text_4">更新新动画</string>
    <string name="game_text_5">小窗</string>
    <string name="game_text_6">在线客服</string>
    <string name="game_text_7">编号：</string>
    <string name="game_text_8">余点：</string>
    <string name="game_text_9">在线：</string>
    <string name="game_text_10">人</string>
    <string name="game_text_11">彩种</string>
    <string name="game_text_12">竞猜</string>
    <string name="game_text_13">记录</string>
    <string name="game_text_14">走势</string>
    <string name="game_text_15">规则</string>
    <string name="game_text_16">刷新</string>
    <string name="game_text_17">车道/车号/金额</string>
    <string name="game_text_18">快速下注</string>
    <string name="game_text_19">发送</string>
    <string name="game_text_20">会员：</string>
    <string name="game_text_21">代理：</string>
    <string name="game_text_22">编号：</string>
    <string name="game_text_23">历史</string>
    <string name="game_text_24">彩种</string>
    <string name="game_text_25">当日结算</string>
    <string name="game_text_26">总流水</string>
    <string name="game_text_27">总盈亏</string>
    <string name="game_text_28">期号</string>
    <string name="game_text_29">玩法</string>
    <string name="game_text_30">下注</string>
    <string name="game_text_31">点数</string>
    <string name="game_text_32">结果</string>
    <string name="game_text_33">操作</string>
    <string name="game_text_34">撤单</string>
    <string name="title_activity_game_xglhc">GameXGLHCActivity</string>
    <string name="game_xglhc_text_1">香港六合彩</string>
    <string name="game_xglhc_text_2">第</string>
    <string name="game_xglhc_text_3">期</string>
    <string name="game_xglhc_text_4">开奖结果</string>
    <string name="game_xglhc_text_5">鼠</string>
    <string name="game_xglhc_text_6">牛</string>
    <string name="game_xglhc_text_7">虎</string>
    <string name="game_xglhc_text_8">兔</string>
    <string name="game_xglhc_text_9">龙</string>
    <string name="game_xglhc_text_10">蛇</string>
    <string name="game_xglhc_text_11">马</string>
    <string name="game_xglhc_text_12">羊</string>
    <string name="game_xglhc_text_13">猴</string>
    <string name="game_xglhc_text_14">鸡</string>
    <string name="game_xglhc_text_15">狗</string>
    <string name="game_xglhc_text_16">猪</string>
    <string name="game_xglhc_text_17">特码</string>
    <string name="game_xglhc_text_18">平码</string>
    <string name="game_xglhc_text_19">尾数</string>
    <string name="game_xglhc_text_20">特码生肖</string>
    <string name="game_xglhc_text_21">特码波色</string>
    <string name="game_xglhc_text_22">正特码</string>
    <string name="game_xglhc_text_23">生肖连</string>
    <string name="game_xglhc_text_24">封盘</string>
    <string name="game_xglhc_text_25">开奖</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_recharge_history">RechargeHistoryActivity</string>
    <string name="exchange_text_1">返水点数兑换</string>
    <string name="exchange_text_2">请输入返水点数</string>
    <string name="exchange_text_3">当前可兑换返水点数为：</string>
    <string name="exchange_text_4">兑换比例</string>
    <string name="exchange_text_5">佣金点数兑换</string>
    <string name="exchange_text_6">请输入佣金点数</string>
    <string name="exchange_text_7">当前可兑换佣金点数为：</string>
    <string name="exchange_text_8">1000:5</string>
    <string name="exchange_text_9">1000:5</string>
    <string name="recharge_history_text_1">充值记录</string>
    <string name="withdraw_history_text_1">提现记录</string>
    <string name="gamble_history_text_1">投注记录</string>
    <string name="gamble_history_text_2">今日</string>
    <string name="gamble_history_text_3">昨日</string>
    <string name="gamble_history_text_4">今日投注</string>
    <string name="gamble_history_text_5">今日账变</string>
    <string name="gamble_history_text_6">今日福利</string>
    <string name="gamble_history_text_7">投注</string>
    <string name="gamble_history_text_8">中奖</string>
    <string name="gamble_history_text_9">盈利</string>
    <string name="gamble_history_text_10">充值</string>
    <string name="gamble_history_text_11">提现</string>
    <string name="gamble_history_text_12">彩种选择</string>
    <string name="gamble_history_text_13">全部彩种</string>
    <string name="gamble_history_text_14">彩种</string>
    <string name="gamble_history_text_15">期号</string>
    <string name="gamble_history_text_16">玩法</string>
    <string name="gamble_history_text_17">号码</string>
    <string name="gamble_history_text_18">金额</string>
    <string name="gamble_history_text_19">状态</string>
    <string name="gamble_history_text_20">元</string>
    <string name="gamble_history_text_21">昨日投注</string>
    <string name="gamble_history_text_22">昨日账变</string>
    <string name="gamble_history_text_23">昨日福利</string>
    <string name="gamble_history_text_24">账变时间</string>
    <string name="gamble_history_text_25">账变类型</string>
    <string name="gamble_history_text_26">账变金额</string>
    <string name="gamble_history_text_27">余额</string>
    <string name="title_activity_agent_cash">AgentCashActivity</string>
    <string name="agent_cash_text_1">代理流水</string>
    <string name="agent_cash_text_2">到</string>
    <string name="agent_cash_text_3">查询</string>
    <string name="agent_cash_text_4">时间</string>
    <string name="title_activity_agent_lower">AgentLowerActivity</string>
    <string name="agent_lower_text_1">下级玩家</string>
    <string name="agent_lower_text_2">ID</string>
    <string name="agent_lower_text_3">昵称</string>
    <string name="agent_lower_text_4">注册时间</string>
    <string name="agent_lower_text_5">贡献流水</string>
    <string name="title_activity_agent_fee">AgentFeeActivity</string>
    <string name="agent_fee_text_1">下级玩家返水</string>
    <string name="agent_fee_text_2">下级玩家返水比例设置</string>
    <string name="agent_fee_text_3">返水比例范围：0-100(%)</string>
    <string name="agent_fee_text_4">10000元流水共返佣金50元</string>
    <string name="agent_fee_text_5">下级玩家返水：</string>
    <string name="agent_fee_text_6">自己所得佣金：</string>
    <string name="agent_fee_text_7">元</string>
    <string name="bandding_text_1">绑定银行卡</string>
    <string name="bandding_text_2">请选择开户银行</string>
    <string name="bandding_text_3">银行名称</string>
    <string name="bandding_text_4">持卡人姓名</string>
    <string name="bandding_text_5">银行卡号</string>
    <string name="bandding_text_6">确认银行卡号</string>
    <string name="game_bjsc_quick_text_9">冠军</string>
    <string name="game_bjsc_quick_text_10">亚军</string>
    <string name="game_bjsc_quick_text_11">季军</string>
    <string name="game_bjsc_quick_text_12">第四名</string>
    <string name="game_bjsc_quick_text_13">第五名</string>
    <string name="game_bjsc_quick_text_14">第六名</string>
    <string name="game_bjsc_quick_text_15">第七名</string>
    <string name="game_bjsc_quick_text_16">第八名</string>
    <string name="game_bjsc_quick_text_17">第九名</string>
    <string name="game_bjsc_quick_text_18">第十名</string>
    <string name="game_bjsc_quick_text_30">大</string>
    <string name="game_bjsc_quick_text_31">小</string>
    <string name="game_bjsc_quick_text_32">单</string>
    <string name="game_bjsc_quick_text_33">双</string>
    <string name="quick_text_1">玩法</string>
    <string name="quick_text_2">定位胆</string>
    <string name="quick_text_3">两面盘</string>
    <string name="quick_text_4">冠亚和</string>
    <string name="quick_text_5">冠亚庄闲</string>
    <string name="quick_text_6">龙虎</string>
</resources>