<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_15"
    tools:context="com.zp.xintianfei.ui.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/act_login_edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_text_1" />

        <EditText
            android:id="@+id/act_login_edt_passowrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_text_2" />

        <Button
            android:id="@+id/act_login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_text_6"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/act_login_btn_login_wexin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="微信"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/act_login_btn_login_qq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="QQ"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_text_4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/login_text_5" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>


