<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/act_game_bjsc_quick_tv_content_title"
    android:layout_marginTop="@dimen/space_5"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_stroke_black"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/space_7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_bjsc_quick_text_9"
                android:textColor="@color/white"
                android:textSize="@dimen/game_content_number_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_3"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_stroke_black"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/space_7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_bjsc_quick_text_10"
                android:textColor="@color/white"
                android:textSize="@dimen/game_content_number_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_3"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_stroke_black"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/space_7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_bjsc_quick_text_11"
                android:textColor="@color/white"
                android:textSize="@dimen/game_content_number_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_3"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_stroke_black"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/space_7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_bjsc_quick_text_12"
                android:textColor="@color/white"
                android:textSize="@dimen/game_content_number_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_3"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_stroke_black"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/space_7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_bjsc_quick_text_13"
                android:textColor="@color/white"
                android:textSize="@dimen/game_content_number_text_size" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_3"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_stroke_black"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/space_7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_bjsc_quick_text_14"
                android:textColor="@color/white"
                android:textSize="@dimen/game_content_number_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_3"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_stroke_black"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/space_7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_bjsc_quick_text_15"
                android:textColor="@color/white"
                android:textSize="@dimen/game_content_number_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_3"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_stroke_black"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/space_7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_bjsc_quick_text_16"
                android:textColor="@color/white"
                android:textSize="@dimen/game_content_number_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_3"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_stroke_black"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/space_7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_bjsc_quick_text_17"
                android:textColor="@color/white"
                android:textSize="@dimen/game_content_number_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_3"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_stroke_black"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/space_7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_bjsc_quick_text_18"
                android:textColor="@color/white"
                android:textSize="@dimen/game_content_number_text_size" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_10"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_stroke_black"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/space_7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_bjsc_quick_text_30"
                android:textColor="@color/white"
                android:textSize="@dimen/game_content_number_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_default"
                android:textColor="@color/yellow"
                android:textSize="@dimen/game_content_number_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_3"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_stroke_black"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/space_7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_bjsc_quick_text_31"
                android:textColor="@color/white"
                android:textSize="@dimen/game_content_number_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_default"
                android:textColor="@color/yellow"
                android:textSize="@dimen/game_content_number_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_3"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_stroke_black"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/space_7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_bjsc_quick_text_32"
                android:textColor="@color/white"
                android:textSize="@dimen/game_content_number_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_default"
                android:textColor="@color/yellow"
                android:textSize="@dimen/game_content_number_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_3"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_stroke_black"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/space_7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_bjsc_quick_text_33"
                android:textColor="@color/white"
                android:textSize="@dimen/game_content_number_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_default"
                android:textColor="@color/yellow"
                android:textSize="@dimen/game_content_number_text_size" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>